--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="message">
         <h2>Precisa de um Desenvolvedor?</h2>
         <p>"Estou pronto para ajudar a transformar sua ideia em realidade! Com minha experiência em desenvolvimento de landing pages e sistemas de controle, posso fornecer soluções personalizadas e de alta qualidade para o seu negócio. Vamos trabalhar juntos para alcançar seus objetivos."</p>
-        <a href="#contact" class="btn-contratar">Contrate-me</a>
+        <a href="https://wa.me/5521993579144" class="btn-contratar">Contrate-me</a>
     </div>
     <div class="developer-image">
         <img src="./assets/img/WhatsApp Image 2024-08-23 at 09.35.47.jpeg" alt="Imagem do Desenvolvedor" class="foto">
@@ -33,15 +33,15 @@
 <section id="contato">
     <div class="duvidas" >
 <div class="duvidas-texto">
-  <h1>Solicite seu orçamento</h1>
+  <h1 class="sub_duv_">Solicite seu orçamento</h1>
   
-  <p>
+  <p class="sub_duv">
     de Forma Estratégica, Ágil e 
    Segura!</p>
 
-   <h2>Acesse minhas redes:</h2>
+   <h2 class="sub_duv">Acesse minhas redes:</h2>
    <a class="apresentacao__links__navegacao" href="https://Instagram.com/_rodriguessg" target="_blank"> <img src="./assets/img/icons8-instagram-32.png" alt="">  </a>
-   <a class="apresentacao__links__navegacao" href="https://github.com/Gabrielworkdev" target="_blank"><img src="./assets/img/icons8-github-32.png" alt=" logo Github">  </a>
+   <a class="apresentacao__links__navegacao" href="https://github.com/rodriguessg?tab=repositories" target="_blank"><img src="./assets/img/icons8-github-32.png" alt=" logo Github">  </a>
    <a class="apresentacao__links__navegacao" href="https://https://www.linkedin.com/in/rodriguessg/" target="_blank"> <img src="./assets/img/icons8-linkedin-32.png" alt=" logo Linkedin"> </a>
 
    
@@ -89,7 +89,7 @@
 
   </div>
   <div class="copy">
-    <a class="footer-copy" href="https://github.com/Gabrielworkdev " target="_blank">Criado por Gabriel Rodrigues, Desenenvolvedor de Software</a>
+    <a class="footer-copy" href="https://github.com/rodriguessg?tab=repositories" target="_blank">Criado por Gabriel Rodrigues, Desenenvolvedor de Software</a>
   </div>
  </footer>
 <script src="./script.js"></script>
