--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <section class="developer-section">
     <div class="message">
         <h2>Precisa de um Desenvolvedor?</h2>
-        <p>"Estou pronto para ajudar a transformar sua ideia em realidade! Com minha experiência em desenvolvimento de landing pages e sistemas de controle, posso fornecer soluções personalizadas e de alta qualidade para o seu negócio. Vamos trabalhar juntos para alcançar seus objetivos."</p>
+        <p>"Estou pronto para ajudar a transformar sua ideia em realidade! Com minha experiência em desenvolvimento de landing pages e sistemas de gestão, posso fornecer soluções personalizadas e de alta qualidade para o seu negócio. Vamos trabalhar juntos para alcançar seus objetivos."</p>
         <a href="https://wa.me/5521993579144" class="btn-contratar">Contrate-me</a>
     </div>
     <div class="developer-image">
@@ -89,7 +89,7 @@
 
   </div>
   <div class="copy">
-    <a class="footer-copy" href="https://github.com/rodriguessg?tab=repositories" target="_blank">Criado por Gabriel Rodrigues, Desenenvolvedor de Software</a>
+    <a class="footer-copy" href="https://github.com/rodriguessg?tab=repositories" target="_blank">Criado por Gabriel Rodrigues, Desenvolvedor de Software</a>
   </div>
  </footer>
 <script src="./script.js"></script>
