--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
   
       <label for="servico"></label>
       <select class="input" id="servico" name="servico" required>
-        <option value="" disabled selected>Selecione o tipo de serviço</option>
+      <option value="">Selecione o tipo de serviço</option>     <!--disabled selected -->
         <option value="automacao">Automação</option>
-        <option value="desenvolvimento_sistema">Desenvolvimento de Sistema</option>
-        <option value="landing_page">Landing Page</option>
+        <option value="desenvolvimento_sistema">Desenvolvimento de Sistemas de Gestão</option>
+        <option value="landing page">Landing Page</option>
+        <option value="Assistencia Técnica">Assitência Técnica</option>
       </select>
   
       <label for="mensagem"></label>
