--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </div>
 <section>
 <div class="duvidas-formulario">
-    <h1>Solicite Consulta Gratuita</h1>
+    <h1>Solicite orçamento sem custo</h1>
   
     <form action="./index.html" id="form" method="get" onsubmit="abrirWhatsapp()">
       <label for="nome"></label>
