--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
 <section class="developer-section">
     <div class="message">
-        <h2>Precisa de um Desenvolvedor?</h2>
-        <p>"Estou pronto para ajudar a transformar sua ideia em realidade! Com minha experiência em desenvolvimento de landing pages e sistemas de gestão, posso fornecer soluções personalizadas e de alta qualidade para o seu negócio. Vamos trabalhar juntos para alcançar seus objetivos."</p>
+      <h2>Precisa de um profissional de T.I ?</h2>
+      <p>Estou aqui para ajudar! Com minha experiência em desenvolvimento de software, além de um forte foco em atendimento e suporte técnico, ofereço soluções personalizadas para aprimorar seu negócio. Seja para desenvolver novas funcionalidades ou resolver problemas rapidamente, estou pronto para colaborar de forma eficaz e garantir que suas operações fluam sem interrupções.</p>
+      
         <a href="https://wa.me/5521993579144" class="btn-contratar">Contrate-me</a>
     </div>
     <div class="developer-image">
